<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">漂流瓶</string>
    <string name="username">&#160;&#160;&#160;&#160;用户名：</string>
    <string name="pwd">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;密码：</string>
    <string name="con_pwd">确认密码：</string>
    <string name="nickname">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;昵称：</string>
    <string name="load">确认登录</string>
    <string name="register">注册</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="sex">性别：</string>

    <string name="send_bottle">发送</string>
    <string name="sure">确定</string>
    <string name="quit">退出</string>
    <string name="cancle">取消</string>
    <string name="please_input_content_of_bottle">请输入瓶子的内容</string>

    <string name="sending">正在发送中</string>
    <string name="send_complete">发送成功</string>
    <string name="send_fail">发送失败</string>

    <string name="opening_bottle">拼命打开中</string>
    <string name="internal_error">内部错误</string>
    <string name="too_far_to_open_bottle">请走近点打开</string>

    <string name="fail_to_get_permission">未获取足够权限</string>
    <string name="no_permission_handle">点击确定再次获得权限，点击退出以结束APP</string>
</resources>
