<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:id="@+id/username2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_name"
            android:text="@string/username"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/register_name_edit"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username2"
        android:id="@+id/nickname1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_nickname"
            android:text="@string/nickname"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/register_nickname_edit"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname1"
        android:id="@+id/pwd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_pwd"
            android:text="@string/pwd"
            />
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/register_pwd_edit"
            android:inputType="textPassword"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwd2"
        android:id="@+id/con_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_con_pwd"
            android:text="@string/con_pwd"
            />
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/register_con_pwd_edit"
            android:inputType="textPassword"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/con_pwd"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_layout"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sex"
            android:text="@string/sex" />
        <RadioGroup
            android:orientation="horizontal"
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:layout_margin="10dp"
                style="@style/style_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman"
                android:id="@+id/woman"/>
            <RadioButton
                android:layout_margin="10dp"
                style="@style/style_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man"
                android:id="@+id/man"/>
        </RadioGroup>
    </LinearLayout>
    <Button
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_layout"
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/load"
        android:textColor="@color/white"/>
</android.support.constraint.ConstraintLayout >