<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/username1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/load_name"
            android:text="@string/username"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/load_name_edit"
           />
    </LinearLayout>
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_below="@id/username1"
        android:layout_marginTop="30dp"
        android:id="@+id/pwd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/load_psd"
            android:text="@string/pwd"
            />
        <EditText
            android:inputType="textPassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/load_psd_edit"

            />
    </LinearLayout>
    <Button
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:layout_below="@+id/pwd1"
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/load"
        />
</RelativeLayout>